--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+ <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_3RGLM6ijRLoOt2xrTl4HYdiOl2_CvLP0Yv2qBzCt9CG9d90J5w"></img>
         <%= link_to "Foogle", "/helloworld", :class => "navbar-brand" %>
+
       </div>
+
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li ><a href="/helloworld">Hello World</a></li>
+
+          <li class="active" ><a href="/helloworld">Hello World</a></li>
+           <li><a href="/helloworld">Things</a></li>
           
         </ul>
       </div>
