--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
- <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_3RGLM6ijRLoOt2xrTl4HYdiOl2_CvLP0Yv2qBzCt9CG9d90J5w"></img>
-        <%= link_to "Foogle", "/helloworld", :class => "navbar-brand" %>
+ 
+        <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_3RGLM6ijRLoOt2xrTl4HYdiOl2_CvLP0Yv2qBzCt9CG9d90J5w"></img>
 
       </div>
 
@@ -35,7 +35,7 @@
         <ul class="nav navbar-nav">
 
           <li class="active" ><a href="/helloworld">Hello World</a></li>
-           <li><a href="/helloworld">Things</a></li>
+           <li><a href="/things">Things</a></li>
           
         </ul>
       </div>
