--- a/app/views/things/_thingshow.html.erb
+++ b/app/views/things/_thingshow.html.erb
@@ -1,4 +1,5 @@
 <% if current_user %>
+<%= will_paginate @things %>
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
@@ -29,8 +30,10 @@
     </tbody>
   </table>
 </div>
+<%= will_paginate @things %>
 
  <%else%>
+<%= will_paginate @things %>
 
  <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
@@ -55,5 +58,5 @@
     </tbody>
   </table>
 </div>
-
+<%= will_paginate @things %>
 <%end%>
